syntax = "proto3";
package users.pb;

option java_multiple_files = true;
option java_package = "io.textile.users_grpc";
option java_outer_classname = "TextileUsers";
option objc_class_prefix = "TT_USERS";

message ListThreadsRequest {}

message ListThreadsReply {
    repeated GetThreadReply list = 1;
}

message GetThreadRequest {
    string name = 1;
}

message GetThreadReply {
    bytes ID = 1;
    string name = 2;
    bool isDB = 3;
}

message SetupMailboxRequest {}

message SetupMailboxReply {
    bytes mailboxID = 1;
}

message Message {
    string ID = 1;
    string from = 2;
    string to = 3;
    bytes body = 4;
    bytes signature = 5;
    int64 createdAt = 6;
    int64 readAt = 7;
}

message SendMessageRequest {
    string to = 1;
    bytes toBody = 2;
    bytes toSignature = 3;
    bytes fromBody = 4;
    bytes fromSignature = 5;
}

message SendMessageReply {
    string ID = 1;
    int64 createdAt = 2;
}

message ListInboxMessagesRequest {
    string seek = 1;
    int64 limit = 2;
    bool ascending = 3;
    Status status = 4;

    enum Status {
        ALL = 0;
        READ = 1;
        UNREAD = 2;
    }
}

message ListSentboxMessagesRequest {
    string seek = 1;
    int64 limit = 2;
    bool ascending = 3;
}

message ListMessagesReply {
    repeated Message messages = 1;
}

message ReadInboxMessageRequest {
    string ID = 1;
}

message ReadInboxMessageReply {
    int64 readAt = 1;
}

message DeleteMessageRequest {
    string ID = 1;
}

message DeleteMessageReply {}

service API {
    rpc GetThread(GetThreadRequest) returns (GetThreadReply) {}
    rpc ListThreads(ListThreadsRequest) returns (ListThreadsReply) {}

    rpc SetupMailbox(SetupMailboxRequest) returns (SetupMailboxReply) {}
    rpc SendMessage(SendMessageRequest) returns (SendMessageReply) {}
    rpc ListInboxMessages(ListInboxMessagesRequest) returns (ListMessagesReply) {}
    rpc ListSentboxMessages(ListSentboxMessagesRequest) returns (ListMessagesReply) {}
    rpc ReadInboxMessage(ReadInboxMessageRequest) returns (ReadInboxMessageReply) {}
    rpc DeleteInboxMessage(DeleteMessageRequest) returns (DeleteMessageReply) {}
    rpc DeleteSentboxMessage(DeleteMessageRequest) returns (DeleteMessageReply) {}
}
